scripts/ctfd-reference-deploy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ctfd
  labels:
    app.kubernetes.io/name: ctfd
