scripts/ctfd-reference-deploy/ctfd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ctfd
  namespace: ctfd
  labels:
    app.kubernetes.io/name: ctfd
    app.kubernetes.io/component: ctfd
  annotations:
    cert-manager.io/cluster-issuer: default-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - example.com
      secretName: ctfd-tls
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ctfd
                port:
                  name: http
